examples/gallery/errors/semantics_duplicate_assignment.fsl
// expected-command: verify --depth 2
// expected-result: error
// expected-kind: semantics
spec GallerySemanticsDuplicateAssignment {
  state { x: Int }
  init { x = 0 }
  action bad() {
    x = 1
    x = 2
  }
}
